tests/negative/type_assign_mismatch.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that assigning incompatible class types causes a compile error.

class Cat {
    meow: boolean;
}

class Dog {
    bark: boolean;
}

let myCat: Cat = new Dog(); // Error: Dog is not assignable to Cat
